炫彩编程助手/Data/DemoMgr/net简化版/Lib/XCGUI.cs


        [DllImport("xcgui.dll", EntryPoint = "XC_GetDefaultFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetDefaultFont();

        [DllImport("xcgui.dll", EntryPoint = "XC_SetDefaultFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetDefaultFont(int hFontX);

        [DllImport("xcgui.dll", EntryPoint = "XC_InitFont", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void InitFont(LOGFONTW* pFont, string pName, int size, bool bBold, bool bItalic, bool bUnderline, bool bStrikeOut);

        [DllImport("xcgui.dll", EntryPoint = "XC_Malloc", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int Malloc(int size);

        [DllImport("xcgui.dll", EntryPoint = "XC_Free", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void Free(int p);

        [DllImport("xcgui.dll", EntryPoint = "XInitXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XInitXCGUI(string pText);

        [DllImport("xcgui.dll", EntryPoint = "XRunXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XRunXCGUI();

        [DllImport("xcgui.dll", EntryPoint = "XExitXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XExitXCGUI();
    }

    partial class XObj
    {
        [DllImport("xcgui.dll", EntryPoint = "XObj_GetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XObj_GetType(int hXCGUI);

        [DllImport("xcgui.dll", EntryPoint = "XObj_GetTypeEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XObj_GetTypeEx(int hXCGUI);
    }
    partial class XUI
    {
        [DllImport("xcgui.dll", EntryPoint = "XUI_SetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XUI_SetStyle(int hXCGUI, int nStyle);

        [DllImport("xcgui.dll", EntryPoint = "XUI_GetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XUI_GetStyle(int hXCGUI);
    }
    partial class XBkInfoM
    {
        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int Create();

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_Destroy", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void Destroy(int hBkInfoM);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_SetBkInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int SetBkInfo(int hBkInfoM, string pText);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_AddInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int AddInfo(int hBkInfoM, string pText);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_AddBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddBorder(int hBkInfoM, int nState, int color, byte alpha, int width);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_AddFill", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddFill(int hBkInfoM, int nState, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_AddImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddImage(int hBkInfoM, int nState, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_GetCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetCount(int hBkInfoM);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_Clear", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void Clear(int hBkInfoM);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_Draw", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool Draw(int hBkInfoM, int nState, int hDraw, RECT pRect);

        [DllImport("xcgui.dll", EntryPoint = "XBkInfoM_DrawEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool DrawEx(int hBkInfoM, int nState, int hDraw, RECT pRect, int nStateFilter);

    }
    partial class XBtn
    {
        [DllImport("xcgui.dll", EntryPoint = "XBtn_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int Create(int x, int y, int cx, int cy, string pName, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_IsCheck", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool IsCheck(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetCheck", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool SetCheck(int hEle, bool bCheck);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetState", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetState(int hEle, int nState);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetState", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetState(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetStateEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetStateEx(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetStyle(int hEle, int nStyle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetStyle(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetType(int hEle, int nType);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetTypeEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetTypeEx(int hEle, int nType);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetType(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetGroupID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetGroupID(int hEle, int nID);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetGroupID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetGroupID(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetBindEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetBindEle(int hEle, int hBindEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetBindEle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetBindEle(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetTextAlign", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetTextAlign(int hEle, int nFlags);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetTextAlign", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetTextAlign(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetIconAlign", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetIconAlign(int hEle, int align);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetOffset", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetOffset(int hEle, int x, int y);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetOffsetIcon", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetOffsetIcon(int hEle, int x, int y);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetIconSpace", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetIconSpace(int hEle, int size);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void GetText(int hEle, string pOut, int nOutLen);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetText(int hEle, string pName);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetIcon", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetIcon(int hEle, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_SetIconDisable", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void SetIconDisable(int hEle, int hImage);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_GetIcon", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int GetIcon(int hEle, int nType);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_AddAnimationFrame", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddAnimationFrame(int hEle, int hImage, int uElapse);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_EnableAnimation", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void EnableAnimation(int hEle, bool bEnable, bool bLoopPlay);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_AddBkBorder", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddBkBorder(int hEle, int nState, int color, byte alpha, int width);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_AddBkFill", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddBkFill(int hEle, int nState, int color, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XBtn_AddBkImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void AddBkImage(int hEle, int nState, int hImage);
